toggle test scores visible, have to fix button symbol

--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,8 @@ textarea {
 
 #toggleShow {
   display: inline-flexbox;
+  margin: 0.1em;
+  margin-left: 1.5em;
 }
 
 #toggleHide {
